--- a/web/resources/css/main.css
+++ b/web/resources/css/main.css
@@ -8,7 +8,7 @@ table, td, th {
 .photo{
     max-height: 20px;
 }
-.error{
+#errors{
     color: red;
 }
 .welcomeMessage{
@@ -17,5 +17,8 @@ table, td, th {
     font-family: cursive;
 }
 #ContactDiv {
+    display: none;
+}
+#errorsDiv{
     display: none;
 }
